Media Queries Added

--- a/Developer_portfolio/index.html
+++ b/Developer_portfolio/index.html
@@ -91,7 +91,7 @@
                 <span class="circle-1">
                     <span class="circle-2"></span>
                 </span>
-                <h1>My works</h1>
+                <h1>My works.</h1>
             </div>
 
             <nav>
@@ -160,7 +160,7 @@
             <div class="col-md-12">
                 <div class="heading-sub">
                     <span class="square"></span>
-                    <h1>My Blog</h1>
+                    <h1>My Blog.</h1>
                 </div>
             </div>
             <div class="col-md-12">
@@ -222,7 +222,6 @@
                         <div class="clients-img">
                             <ul>
                                 <li><img src="./images/clients/zerply.png" alt=""></li>
-                                <li><img src="./images/clients/nexus.png" alt=""></li>
                                 <li><img src="./images/clients/sage.png" alt=""></li>
                                 <li><img src="./images/clients/skrill.png" alt=""></li>
                                 <li><img src="./images/clients/woocommerce.png" alt=""></li>
@@ -243,7 +242,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="heading-contact">
-                    <h1>Contact</h1>
+                    <h1>Contact.</h1>
                 </div>
             </div>
         </div>
