--- a/Developer_portfolio/index.html
+++ b/Developer_portfolio/index.html
@@ -61,7 +61,7 @@
                     <div class="bio">
                         <div>
                             <span>who ami </span>
-                            <h2>hello</h2>
+                            <h2>hello !</h2>
                             <img src="./images/zigzag.svg" alt="">
                         </div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
