--- a/Developer_portfolio/index.html
+++ b/Developer_portfolio/index.html
@@ -141,7 +141,7 @@
                 </div>
 
                 <!-- Button Load More Project -->
-                <a href="#" class="more-projects">Load More</a>
+                <a href="#" class="more-projects"><i class="fa fa-spinner" aria-hidden="true"></i> Load More</a>
 
 
             </div>
