--- a/Developer_portfolio/index.html
+++ b/Developer_portfolio/index.html
@@ -8,8 +8,21 @@
     <title>Developer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"
+        integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css"
+        integrity="sha512-+EoPw+Fiwh6eSeRK7zwIKG2MA8i3rV/DGa3tdttQGgWyatG/SkncT53KHQaS5Jh9MNOT3dmFL0FjTY08And/Cw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
+    <link rel="stylesheet" href="style/style.css">
 
 </head>
 
@@ -43,8 +56,8 @@
             </div>
         </div>
     </header>
-<!-- End Header -->
-<!-- Start About  -->
+    <!-- End Header -->
+    <!-- Start About  -->
     <section class="about" id="about">
         <div class="container">
 
@@ -79,111 +92,113 @@
 
         </div>
     </section>
-<!-- End About -->
+    <!-- End About -->
 
-<!-- Start Works  -->
-<section class="works" id="works">
-   <div class="container">
-       <img class="dots-works" src="./images/dots-lg.svg" alt="">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="heading-work">
-                <span class="circle-1">
-                    <span class="circle-2"></span>
-                </span>
-                <h1>My works.</h1>
-            </div>
+    <!-- Start Works  -->
+    <section class="works" id="works">
+        <div class="container">
+            <img class="dots-works" src="./images/dots-lg.svg" alt="">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="heading-work">
+                        <span class="circle-1">
+                            <span class="circle-2"></span>
+                        </span>
+                        <h1>My works.</h1>
+                    </div>
 
-            <nav>
-                <ul>
-                    <li class="active">ALL</li>
-                    <li>Graphic</li>
-                    <li>Webdesign</li>
-                    <li>Branding</li>
-                </ul>
-            </nav>
+                    <nav>
+                        <ul>
+                            <li class="list active" data-filter="all">ALL</li>
+                            <li class="list" data-filter="graphic">Graphic</li>
+                            <li class="list" data-filter="webdesign">Webdesign</li>
+                            <li class="list" data-filter="branding">Branding</li>
+                        </ul>
+                    </nav>
 
-            <div class="items-projects">
-                <div class="item">
-                    <img src="./images/works/img1.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img src="./images/works/img2.jpg" alt="">
+                    <div class="items-projects">
+                        <a href="./images/works/img1.jpg" class="item webdesign">
+                            <img src="./images/works/img1.jpg" alt="">
+                        </a>
+                        <a href="./images/works/img2.jpg" class="item webdesign">
+                            <img src="./images/works/img2.jpg" alt="">
 
-                </div>
-                <div class="item">
-                    <img src="./images/works/img3.jpg" alt="">
+                        </a>
+                        <a href="./images/works/img3.jpg" class="item branding">
+                            <img src="./images/works/img3.jpg" alt="">
 
-                </div>
-                <div class="item">
-                    <img src="./images/works/img4.jpg" alt="">
+                        </a>
+                        <a href="./images/works/img4.jpg" class="item branding">
+                            <img src="./images/works/img4.jpg" alt="">
 
-                </div>
-                <div class="item">
-                    <img src="./images/works/img5.jpg" alt="">
+                        </a>
+                        <a href="./images/works/img5.jpg" class="item branding">
+                            <img src="./images/works/img5.jpg" alt="">
 
-                </div>
-                <div class="item">
-                    <img src="./images/works/img6.jpg" alt="">
+                        </a>
+                        <a href="./images/works/img6.jpg" class="item graphic">
+                            <img src="./images/works/img6.jpg" alt="">
 
-                </div>
-                <div class="item">
-                    <img src="./images/works/img7.jpg" alt="">
+                        </a>
+                        <a href="./images/works/img7.jpg" class="item graphic">
+                            <img src="./images/works/img7.jpg" alt="">
 
-                </div>
-                <div class="item">
-                    <img src="./images/works/img8.jpg" alt="">
+                            </diav>
+                            <a href="./images/works/img8.jpg" class="item webdesign">
+                                <img src="./images/works/img8.jpg" alt="">
 
-                </div>
-                <div class="item">
-                    <img src="./images/works/img9.jpg" alt="">
+                            </a>
+                            <a href="./images/works/img9.jpg" class="item graphic">
+                                <img src="./images/works/img9.jpg" alt="">
 
-                </div>
+                            </a>
 
-                <!-- Button Load More Project -->
-                <a href="#" class="more-projects"><i class="fa fa-spinner" aria-hidden="true"></i> Load More</a>
-
-
-            </div>
+                            <!-- Button Load More Project -->
+                            <a href="#" class="more-projects"><i class="fa fa-spinner" aria-hidden="true"></i> Load
+                                More</a>
 
 
-        </div>
-    </div>
-   </div>
-</section>
-<!-- End Works -->
+                    </div>
 
-<!-- Start Subscribe -->
-<section class="subscribe" id="blog">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="heading-sub">
-                    <span class="square"></span>
-                    <h1>My Blog.</h1>
-                </div>
-            </div>
-            <div class="col-md-12">
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, sint.
-                </p>
-            </div>
-            <div class="col-md-12">
-                <div class="sub-email">
-
-                   <form action="" method="post">
-                    <input type="text" placeholder="Enter Your Email" required>
-                    <input type="submit" value="Subscribe Now">
-                   </form>
 
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<!-- End Subscribe -->
+    </section>
+    <!-- End Works -->
 
-<!-- Start Clients -->
+    <!-- Start Subscribe -->
+    <section class="subscribe" id="blog">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="heading-sub">
+                        <span class="square"></span>
+                        <h1>My Blog.</h1>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic. Lorem ipsum dolor sit amet
+                        consectetur adipisicing elit. Iure, sint.
+                    </p>
+                </div>
+                <div class="col-md-12">
+                    <div class="sub-email">
+
+                        <form action="" method="post">
+                            <input type="text" placeholder="Enter Your Email" required>
+                            <input type="submit" value="Subscribe Now">
+                        </form>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Subscribe -->
+
+    <!-- Start Clients -->
     <section class="clients" id="clients">
         <div class="container">
             <img src="./images/dots-lg.svg" class="dots-clients" alt="" srcset="">
@@ -195,13 +210,14 @@
                 </div>
                 <div class="col-md-12">
                     <div class="reviews">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum eius consectetur tempora excepturi illum deleniti nihil ut laborum repellat dignissimos.</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum eius consectetur tempora
+                            excepturi illum deleniti nihil ut laborum repellat dignissimos.</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, illo. Sed, corrupti.</p>
                         <div class="profile">
-                           <div class="info-profile">
-                            <h4>Mark Rise</h4>
-                            <p>CEO Founder.</p>
-                           </div>
+                            <div class="info-profile">
+                                <h4>Mark Rise</h4>
+                                <p>CEO Founder.</p>
+                            </div>
                             <img src="./images/clients/client1.jpg" alt="client1">
                         </div>
                     </div>
@@ -233,63 +249,100 @@
             </div>
         </div>
     </section>
-<!-- End Clients -->
+    <!-- End Clients -->
 
-<!-- Start Contact -->
+    <!-- Start Contact -->
 
-<section  class="contact" id="contact">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="heading-contact">
-                    <h1>Contact.</h1>
+    <section class="contact" id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="heading-contact">
+                        <h1>Contact.</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="email">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <a href="mailto:myemail@gmail.com">myemail@gmail.com</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="phone">
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                        <a href="tel:+2124251922">+2124251922</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <address>
+                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        <p> Morocco-Bournazel-Dyar Essalam <br>
+                            IMM 303 N° 1</p>
+                    </address>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-md-6 mx-auto">
+                    <div class="socials-icons">
+                        <ul>
+                            <li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                            <li><a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                            <li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                            <li><a href=""><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                            <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="email">
-                    <i class="fa fa-envelope" aria-hidden="true"></i>
-                    <a href="mailto:myemail@gmail.com">myemail@gmail.com</a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="phone">
-                    <i class="fa fa-phone" aria-hidden="true"></i>
-                    <a href="tel:+2124251922">+2124251922</a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <address>
-                    <i class="fa fa-map-marker" aria-hidden="true"></i>
-                   <p> Morocco-Bournazel-Dyar Essalam <br>
-                    IMM 303 N° 1</p>
-                </address>
-            </div>
+    </section>
+    <!-- End Contact -->
 
-        </div>
-        <div class="row">
-            <div class="col-md-6 mx-auto">
-                <div class="socials-icons">
-                    <ul>
-                        <li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                        <li><a href=""><i class="fa fa-github" aria-hidden="true"></i></a></li>
-                        <li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- End Contact -->
+    <!-- Start Footer -->
+    <footer>
+        <p> &copy; 2022 , All Right Reserved <i class="fa fa-code" aria-hidden="true"></i> Coded By MLimad</p>
+    </footer>
+    <!-- End Footer -->
 
-<!-- Start Footer -->
-<footer>
-    <p>	&copy; 2022 , All Right Reserved <i class="fa fa-code" aria-hidden="true"></i> Coded By MLimad</p>
-</footer>
-<!-- End Footer -->
+
+    <script>
+        $(document).ready(function () {
+
+
+            // Gallery
+            $(".items-projects").magnificPopup({
+                delegate: "a",
+                type: 'image',
+                gallery: {
+                    enabled: true
+                }
+
+            });
+
+            // Filter Gallery
+             $(".list").click( function(){
+               const value =  $(this).attr("data-filter");
+                if (value == "all") {
+                    $(".item").show('1000')
+                }
+                else{
+                    $(".item").not('.'+value).hide('1000');
+                    $(".item").filter('.'+value).show('1000');
+                }
+
+            });
+
+            // Add Class "Active" On Gallery Navigation
+            $(".list").click( function(){
+               $(this).addClass("active").siblings().removeClass("active")
+
+            });
+
+        })
+    </script>
 
 </body>
 
