--- a/Developer_portfolio/index.html
+++ b/Developer_portfolio/index.html
@@ -20,9 +20,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css"
         integrity="sha512-+EoPw+Fiwh6eSeRK7zwIKG2MA8i3rV/DGa3tdttQGgWyatG/SkncT53KHQaS5Jh9MNOT3dmFL0FjTY08And/Cw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-
-    <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+				
+     <link rel="stylesheet" href="style/style.css">
 
 </head>
 
@@ -208,11 +210,14 @@
                         <h1>My Clients.</h1>
                     </div>
                 </div>
-                <div class="col-md-12">
+             <div class="row slider">
+                <div class="col-md-4">
                     <div class="reviews">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum eius consectetur tempora
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum eius consectetur
+                            tempora
                             excepturi illum deleniti nihil ut laborum repellat dignissimos.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, illo. Sed, corrupti.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, illo. Sed,
+                            corrupti.</p>
                         <div class="profile">
                             <div class="info-profile">
                                 <h4>Mark Rise</h4>
@@ -221,18 +226,39 @@
                             <img src="./images/clients/client1.jpg" alt="client1">
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="pagination-reviews">
-                            <span class="active"></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </div>
+        </div>
+        <div class="col-md-4">
+            <div class="reviews">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum eius consectetur
+                    tempora
+                    excepturi illum deleniti nihil ut laborum repellat dignissimos.</p>
+                
+                <div class="profile">
+                    <div class="info-profile">
+                        <h4>Jhon Eddy</h4>
+                        <p>Designer Web.</p>
                     </div>
+                    <img src="./images/clients/client2.jpg" alt="client1">
                 </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="reviews">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum eius consectetur
+                    tempora
+                    excepturi illum deleniti nihil ut laborum repellat dignissimos.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                <div class="profile">
+                    <div class="info-profile">
+                        <h4>Smith Kareem</h4>
+                        <p>Digital Marketing</p>
+                    </div>
+                    <img src="./images/clients/client3.jpg" alt="client1">
+                </div>
+            </div>
+        </div>
+             </div>
+
                 <div class="row">
                     <div class="col-md-12">
                         <div class="clients-img">
@@ -323,24 +349,59 @@
             });
 
             // Filter Gallery
-             $(".list").click( function(){
-               const value =  $(this).attr("data-filter");
+            $(".list").click(function () {
+                const value = $(this).attr("data-filter");
                 if (value == "all") {
                     $(".item").show('1000')
-                }
-                else{
-                    $(".item").not('.'+value).hide('1000');
-                    $(".item").filter('.'+value).show('1000');
+                } else {
+                    $(".item").not('.' + value).hide('1000');
+                    $(".item").filter('.' + value).show('1000');
                 }
 
             });
 
             // Add Class "Active" On Gallery Navigation
-            $(".list").click( function(){
-               $(this).addClass("active").siblings().removeClass("active")
+            $(".list").click(function () {
+                $(this).addClass("active").siblings().removeClass("active")
 
             });
 
+            $('.slider').slick({
+  dots: true,
+  infinite: false,
+  speed: 300,
+  slidesToShow: 1,
+  slidesToScroll: 1,
+  arrows:true,
+  responsive: [
+    {
+      breakpoint: 1024,
+      settings: {
+        slidesToShow: 3,
+        slidesToScroll: 3,
+        infinite: true,
+        dots: true
+      }
+    },
+    {
+      breakpoint: 600,
+      settings: {
+        slidesToShow: 2,
+        slidesToScroll: 2
+      }
+    },
+    {
+      breakpoint: 480,
+      settings: {
+        slidesToShow: 1,
+        slidesToScroll: 1
+      }
+    }
+    // You can unslick at a given breakpoint now by adding:
+    // settings: "unslick"
+    // instead of a settings object
+  ]
+});
         })
     </script>
 
